# deep_c_cc

./: README.md
bazel_cc_demo/: README.md
bazel_cc_demo/cpp_test/: README.md
bazel_cc_demo/cpp_test/test1/: README.md
bazel_cc_demo/cpp_test/test2/: README.md
bazel_cc_demo/cpp_test/test3/: README.md
bazel_cc_demo/third-party-dependencies/: BUILD  WORKSPACE  hello_world.cpp
bazel_cc_dynamic_library/: README.md  WORKSPACE  run.sh
bazel_cc_dynamic_library/call_so_a_library/: BUILD  main.cc
bazel_cc_dynamic_library/cc_a_library/: BUILD  static.cc  static.h
bazel_cc_dynamic_library/cc_so_library/: BUILD  dllfunc.cc  dllfunc.h
c_so_cpp2022/cpp_test_mult_file_o_so/: run.sh
c_so_cpp2022/cpp_test_mult_file_o_so/mono_cpp_A/: a.out  mainA.cpp
c_so_cpp2022/cpp_test_mult_file_o_so/mult_cpp_A/: a.out  mainA.cpp
c_so_cpp2022/cpp_test_mult_file_o_so/same_cpp_A/: A.cpp  A.h  a.out  mainA.cpp
c_so_cpp2022/cpp_test_so/: README.md  a.out  func.cpp  header.h  main.cpp  run.sh  test2
c_so_cpp2022/java_cc_so/: README.md
c_so_cpp2022/so_test/: add.c  main  main.c  run.sh
c_so_cpp2022/so_test2/: run.sh  test
c_so_cpp2022/so_test3/: add.c  add.h  run.sh  test  test.cpp
c_so_cpp2022/so_test4/: CMakeLists.txt  main.cc  run.sh
c_so_cpp2022/so_test4/include/: add.h
c_so_cpp2022/so_test4/src/: CMakeLists.txt
c_so_cpp2022/struct_cpp_so_demo/: cppcppl1  cppcppl1.cpp  cppl1.cpp  run.sh
learning_cpp/demo/: class_temp.cc  fun_temp.cc  run.sh
learning_cpp/tensorfow_py_so_cpp_2022/: CMakeLists.txt  load_models.py  readTF.cpp  tf_models.py
(+10 files in other folders)
